[tool.poetry]
name = "dggs-sandbox"
version = "0.1.0"
description = ""
authors = ["Lakin Wecker <lakin.wecker@ucalgary.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
conan = "^1.34.0"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
